[metadata]
name = rss_bot
version = attr: rss_bot.version
description = Chat Bot for using RSS feeds within http://delta.chat/
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = deltabot, plugin, RSS
license = MPL
classifiers =
            Development Status :: 3 - Alpha
            Environment :: Plugins
            Programming Language :: Python :: 3
            License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
            Operating System :: OS Independent
            Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  deltabot >=0.7.3

[options.entry_points]
deltabot.plugins =
  rss_bot = rss_bot

[options.package_data]
* = *.txt, *.rst
